Add attendees to user#show view
Each DB seed user (aside from the first user) was given 2 past events
and 2 future events. Each seed event was given 5 random unique
attendees.

42 users were added to users.yml because I will likely add pagination
to the users#index view and will need to have enough users to test.

15 past events and 15 future events were added to events.yml to test
event#index pagination and user#upcoming_events and
user#previous_events.

Changed type of Event.date to use with Faker::Date.

Updated test files with the new user fixture names.

Created integration test for users#show.

Deleted remnant test files that were created when I was setting up the
model associations and I couldn't decide on what to name the through
model.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,2 +1,13 @@
-foobar:
-  name:     'foobar'
+rhaenys:
+  name: 'Rhaenys Targaryen'
+
+visenya:
+  name: 'Visenya Targaryen'
+
+aegon:
+  name: 'Aegon I Targaryen'
+
+<% 40.times do |n| %>
+user_<%= n + 3 %>:
+  name: <%= "User#{n} Targaryen" %>
+<% end %>
