--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -2,10 +2,26 @@ party_at_toms:
   location: "Tom's House"
   date: 'June 13th, 2019'
   description: "Bring all the beer you can find to TOM'S PLACE"
-  creator: :foobar
+  creator: rhaenys
 
 red_carpet_gala:
   location: 'Kennedy Center'
   date: 'August 24th, 2019'
   description: "Award reception at the Kennedy Center"
-  creator: :foobar
+  creator: rhaenys
+
+<% 15.times do |n| %>
+event_<%= n %>:
+  location: <%= Faker::Address.unique.street_address %>
+  date: <%= Faker::Time.forward(90, :evening) %>
+  description: <%= Faker::Lorem.unique.paragraph %>
+  creator: rhaenys
+<% end %>
+
+<% 15.times do |n| %>
+event_<%= n + 15%>:
+  location: <%= Faker::Address.unique.street_address %>
+  date: <%= Faker::Time.backward(90, :evening) %>
+  description: <%= Faker::Lorem.unique.paragraph %>
+  creator: rhaenys
+<% end %>
