--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,5 +9,5 @@ aegon:
 
 <% 40.times do |n| %>
 user_<%= n + 3 %>:
-  name: <%= "User#{n} Targaryen" %>
+  name: <%= "User#{n + 3} Targaryen" %>
 <% end %>
